# cohortex

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_all_examples.py  setup_env.py
.github/workflows/: ci.yml
cohortex/: __init__.py  __main__.py  agent.py  cli.py  config.py  docsource.py  embeddings.py  jsonutil.py  orchestrator.py  profiles.py  prompts.py  runtime.py  vault.py
cohortex/providers/: __init__.py  anthropic.py  gemini.py  ollama.py  openai.py
cohortex/tools/: __init__.py
configs/: backends.yaml  vaults.yaml
configs/agents/: editor.yaml  mathematician.yaml  researcher.yaml  summarizer.yaml  supervisor.yaml  writer.yaml
configs/crews/: assistant.yaml  research_team.yaml
examples/: long_context_agent.py  rag_vs_long_context.py  sequential_crew.py  single_agent.py  streaming_agent.py  supervisor_crew.py
tests/: test_framework.py
vaultmind/: __init__.py  __main__.py  agent.py  cli.py  config.py  embeddings.py  orchestrator.py  profiles.py  prompts.py  runtime.py  vault.py
vaultmind/providers/: __init__.py  anthropic.py  ollama.py
