[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultmind"
version = "0.1.0"
description = "A modular, provider-agnostic multi-agent framework with pluggable knowledge vaults."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ryan Seibert" }]
keywords = ["agents", "multi-agent", "llm", "rag", "ollama", "orchestration"]
dependencies = [
    "chromadb",
    "httpx",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
local = ["sentence-transformers"]   # offline embedding fallback
openai = ["openai"]                 # openai + grok backends
anthropic = ["anthropic"]
gemini = ["google-genai"]
all = ["sentence-transformers", "openai", "anthropic", "google-genai"]
dev = ["pytest"]

[project.scripts]
vaultmind = "vaultmind.cli:main"

[tool.setuptools.packages.find]
include = ["vaultmind*"]
